--- a/public/styles/FooterBoxStyles.css
+++ b/public/styles/FooterBoxStyles.css
@@ -3,8 +3,10 @@
     position: absolute;
     bottom: 0px;
     left: 0px;
-    width: 100vw;
+    width: 100%;
     height: 280px;
+    margin: 0px;
+    padding: 0px;
     z-index: 4;
     /*background-color: rgb(63, 63, 63);*/
     background: linear-gradient(to bottom right, rgb(72, 83, 235) 30%, rgb(138, 65, 255));
@@ -12,8 +14,8 @@
 }
 
 .footerTitle {
-    position: relative;
-    top: 50px;
+    position: absolute;
+    top: 55px;
     left: calc(50% - 151px);
     color: white;
     font-size: 30px;
@@ -22,9 +24,9 @@
 }
 
 .footerLinks {
-    position: relative;
+    position: absolute;
     left: calc(50% - 50px);
-    top: 50px;
+    top: 130px;
     width: 100px;
     height: 35px;
 }
@@ -38,18 +40,19 @@
 }
 
 .authorParagraph {
-    position: relative;
-    left: calc(50% - 250px);
-    width: 500px;
-    top: 5px;
+    position: absolute;
+    left: calc(50% - 150px);
+    width: 300px;
+    top: 40px;
     text-align: center;
     color: rgb(201, 201, 201);
 }
 
 .copyRightParagraph {
-    position: relative;
-    left: calc(50% - 250px);
-    width: 500px;
+    position: absolute;
+    left: calc(50% - 150px);
+    width: 300px;
+    top: 75px;
     text-align: center;
     color: rgb(201, 201, 201);
 }
