--- a/public/styles/mediaQueries/sub1650px.css
+++ b/public/styles/mediaQueries/sub1650px.css
@@ -40,7 +40,7 @@
     }
 
     .informationButtonBox {
-        left: calc(50% - 550px);
+        left: calc(50% - 555px);
         width: 1100px;
         top: 580px;
     }
@@ -98,7 +98,7 @@
         height: 700px;
     }
 
-    .aboutSectionTitle {
+    .aboutBoxTitle {
         position: relative;
         left: calc(50% - 80px);
         padding-top: 60px;
@@ -297,6 +297,10 @@
         margin-top: 20px;
         border: 1px solid rgb(215, 222, 255);
         transition: all .15s ease-out;
+    }
+
+    .homePageBox {
+        height: 3350px;
     }
     
 }
