--- a/public/styles/mediaQueries/sub800px.css
+++ b/public/styles/mediaQueries/sub800px.css
@@ -1,5 +1,5 @@
 
-@media (max-width: 725px) {
+@media (max-width: 800px) {
     .earthPinIllustration {
         display: none;
     }
@@ -12,20 +12,21 @@
         position: absolute;
         top: 35px;
         width: 330px;
-        left: calc(50vw - 165px);
+        left: calc(50% - 170px);
         height: 250px;
         font-size: 11px;
     }
 
     .startSubText {
         top: 85px;
+        left: 95px;
         font-size: 1.2em;
     }
 
     .startButton {
         width: 120px;
         height: 32px;
-        left: 103px;
+        left: 110px;
         top: 140px;
         font-size: 1.2em;
     }
@@ -50,7 +51,7 @@
         height: 290px;
         background-color: rgba(106, 165, 28, 0);
         top: 250px;
-        left: calc(50vw - 140px);
+        left: calc(50% - 145px);
     }
 
     .informationButton {
@@ -79,15 +80,6 @@
         left: 110px;
     }
 
-    .aboutBox {
-        top: 565px;
-    }
-
-    .aboutSubTitle {
-        font-size: 27px;
-    }
-
-    /* ABOUT BOX */
     .aboutText {
         position: relative;
         top: -30px;
@@ -230,4 +222,114 @@
         font-size: 2.5vw;
         text-align: left;   
     }
+
+    /* ABOUT BOX */
+    .aboutBox {
+        position: absolute;
+        left: calc(50% - 165px);
+        width: 330px;
+        top: 555px;
+        height: 1350px;
+        margin-bottom: 100px;
+        border-top-style: solid;
+        border-top-width: 2px;
+        border-top-color: rgb(235, 235, 235);
+    }
+    
+    .slideBox {
+        position: absolute;
+        top: -40px;
+        left: 0px;
+        width: 100%;
+        height: 700px;
+    }
+
+    .aboutBoxTitle {
+        position: relative;
+        left: calc(50% - 75px);
+        padding-top: 40px;
+        font-size: 45px;
+    }
+    
+    .aboutMotivationBox {
+        position: relative;
+        top: 0px;
+        width: 300px;
+        height: 445px;
+        left: 0px;
+        padding: 15px;
+    }
+    
+    .aboutProjectBox {
+        position: relative;
+        top: 20px;
+        width: 300px;
+        height: 370px;
+        left: 0px;
+        padding: 15px;
+    }
+    
+    .aboutUsBox {
+        position: relative;
+        top: 40px;
+        width: 300px;
+        height: 245px;
+        left: 0px;
+        padding: 15px;
+    }
+
+    .aboutText {
+        line-height: 25px;
+    }
+
+    .aboutPadding {
+        padding-bottom: 10px;
+    }
+
+    /* EXPLANATION BOX */
+
+    .explainationBox {
+        position: absolute;
+        top: 1910px;
+        left: calc(50% - 165px);
+        width: 330px;
+        margin: 0px;
+    }
+
+    .explainationBoxTitle {
+        position: relative;
+        left: calc(50% - 75px);
+        padding-top: 40px;
+        font-size: 45px;
+    }
+
+    .howToClassifyBox {
+        width: 100%;
+        left: 0px;
+    }
+
+    .howToRequestBox {
+        width: 100%;
+        left: 0px;
+    }
+
+    .inputTableImage {
+        width: 60vw;
+        left: calc(50% - 30vw);
+    }
+    
+    .outputTableImage {
+        width: 60vw;
+        left: calc(50% - 30vw);
+    }
+
+    .explainationPoint {
+        width: 90%;
+        left: calc(50% - 48%);
+    }
+
+    .homePageBox {
+        height: 4300px;
+    }
+
 }
