--- a/public/styles/mediaQueries/sub1350px.css
+++ b/public/styles/mediaQueries/sub1350px.css
@@ -8,6 +8,12 @@
         top: 128px;
         right: 5vw;
     }
+
+    .earthPinIllustration2 {
+        height: 400px;
+        top: 90px;
+        right: 11vw;
+    }
     
     .startBox {
         width: 500px;
