--- a/public/styles/mediaQueries/sub1650px.css
+++ b/public/styles/mediaQueries/sub1650px.css
@@ -9,6 +9,12 @@
         top: 143px;
         right: 5vw;
     }
+
+    .earthPinIllustration2 {
+        height: 500px;
+        top: 95px;
+        right: 10vw;
+    }
     
     .startBox {
         width: 600px;
