made /classification and /model-request responsive

--- a/public/styles/ModelSubmissionStyles.css
+++ b/public/styles/ModelSubmissionStyles.css
@@ -52,8 +52,8 @@
     top: 77px;
     left: 7px;
     width: 980px;
-    height: 45px;
-    background-color: white;
+    height: 65px;
+    background-color: transparent;
 }
 
 .modelNameTitle {
