--- a/public/styles/ClassificationPageStyles.css
+++ b/public/styles/ClassificationPageStyles.css
@@ -11,8 +11,9 @@
 .inner {
     position: absolute;
     height: 885px;
+    width: 1437px;
     background-color: rgb(255, 255, 255);
-    left: calc(50% - 738px);
+    left: calc(50% - 720px);
     top: 50px;
 }
 
@@ -119,6 +120,7 @@
     padding-top: 7px;
     padding-bottom: 7px;
     box-shadow: 1px 1px 5px rgba(0, 0, 0, 0.2);
+    word-wrap: break-word;
 }
 
 .chooseModelButton:hover {
@@ -136,6 +138,7 @@
     left: 400px;
     height: 770px;
     width: 1047px;
+    background-color: rgb(255, 255, 255);
 }
 
 .chooseInstruction {
@@ -292,13 +295,15 @@
 
 .uploadBox {
     position: absolute;
-    top: 32px;
+    top: 530px;
     left: 15px;
+    width: 97%;
+    height: 240px;
 }
 
 .uploadBoxTitle {
     position: absolute;
-    top: 495px;
+    top: -10px;
     left: 10px;
     font-size: 22px;
     color: rgb(63, 63, 63);
@@ -307,7 +312,7 @@
 .uploadExplanation {
     position: absolute;
     left: 55px;
-    top: 538px;
+    top: 27px;
     font-size: 20px;
     width: 1000px;
     font-weight: 400;
@@ -418,7 +423,7 @@
 .fileDropArea {
     position: absolute;
     left: 52px;
-    top: 585px;
+    top: 80px;
     width: 903px;
     height: 152px;
     border: solid 1px rgb(196, 196, 196);
@@ -467,7 +472,7 @@
     left: 15px;
     width: 97%;
     height: 95%;
-    background-color: white;
+    background-color: rgb(255, 255, 255);
 }
 
 .notReadyMessage {
