--- a/public/styles/ClassificationPopupStyles.css
+++ b/public/styles/ClassificationPopupStyles.css
@@ -1,8 +1,8 @@
 
 .classificationPopup {
-    position: absolute;
+    position: fixed;
     top: calc(50% - 150px);
-    left: calc(50% + 450px);
+    left: calc(50% - 275px);
     width: 550px;
     height: 300px;
     background-color: white;
