--- a/public/styles/ModelHelpStyles.css
+++ b/public/styles/ModelHelpStyles.css
@@ -39,7 +39,7 @@
 .helpText {
     color: rgb(63, 63, 63);
     font-size: 18px;
-    width: 300px;
+    width: 97%;
     text-align: justify;
     padding-left: 5px;
     padding-right: 6px;
@@ -83,9 +83,10 @@
     font-size: 17px;
     background-color: white;
     border: none;
-    left: -2px;
+    left: calc(50% - 85px);
+    top: 60px;
+
     padding-top: 2px;
-    top: 0px;
     border-radius: 5px;
     color: rgb(117, 117, 117);
     height: 30px;
@@ -113,7 +114,7 @@
 	left: 0px;
 	right: 0px;
 	bottom: 0px;
-	z-index: 15;
+	z-index: 9999;
     background-color: rgb(0, 0, 0);
     opacity: 0.65;
 }
