--- a/public/styles/NavBarStyles.css
+++ b/public/styles/NavBarStyles.css
@@ -47,10 +47,11 @@
 
 .logo {
     position: absolute;
-    top: -8px;
-    left: -41px;
-    width: 110px;
-    height: 110px;
+    top: -2px;
+    left: -5px;
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
 }
 
 
