--- a/public/styles/PresentStyles.css
+++ b/public/styles/PresentStyles.css
@@ -77,6 +77,8 @@
     top: 27px;
     height: 20px;
     width: 20px;
+    border-radius: 50%;
+    padding-top: 1px;
     z-index: 1000;
     outline: none;
 }
