--- a/public/styles/mediaQueries/sub1100px.css
+++ b/public/styles/mediaQueries/sub1100px.css
@@ -112,9 +112,9 @@
         display: flex;
         flex-direction: column;
         justify-content: space-between;
-        right: -25px;
+        right: -1vw;
         border-radius: 3px;
-        top: 61px;
+        top: 70px;
         width: 230px;
         background-color: rgb(255, 255, 255);
         z-index: 16;
