added name and role signup fields, moved signup validation server side

--- a/public/styles/LoginStyles.css
+++ b/public/styles/LoginStyles.css
@@ -12,7 +12,7 @@
 .authFieldBox {
     position: absolute;
     width: 400px;
-    height: 500px;
+    height: 510px;
     left: calc(50% - 200px);
     top: 200px;
     border-radius: 10px;
@@ -98,16 +98,75 @@
     background-color: rgb(255, 255, 255);
 }
 
-.emailLabel {
+.nameField {
     position: absolute;
+    top: 20px;
+    left: 0px;
+    border-radius: 5px;
+    border: solid 1px rgb(195, 195, 195);
+    height: 35px;
+    width: 170px;
+    box-shadow: 1px 2px 4px rgba(0, 0, 0, 0.25);
+    font-family: inherit;
+    font-size: 16px;
+    padding-left: 12px;
+    outline: none;
+}
+
+.roleField {
+    position: absolute;
+    top: 20px;
+    right: 0px;
+    border-radius: 5px;
+    border: solid 1px rgb(195, 195, 195);
+    height: 39px;
+    width: 135px;
+    box-shadow: 1px 2px 4px rgba(0, 0, 0, 0.25);
+    font-family: inherit;
+    font-size: 16px;
+    padding-left: 12px;
+    outline: none;
+}
+
+.nameLabel {
+    position: absolute;
+    top: -4px;
+    left: 0px;
     font-weight: 600;
     font-size: 17px;
     color: rgb(50, 50, 50);
 }
 
-.loginEmailField, .signupEmailField {
+.roleLabel {
+    position: absolute;
+    top: -4px;
+    left: 205px;
+    font-weight: 600;
+    font-size: 17px;
+    color: rgb(50, 50, 50);
+}
+
+.emailLabel {
+    position: absolute;
+    left: 0px;
+    font-weight: 600;
+    font-size: 17px;
+    color: rgb(50, 50, 50);
+}
+
+.loginEmailLabel {
+    top: 5px;
+}
+
+.signupEmailLabel {
+    top: 70px;
+}
+
+
+.emailField {
     position: absolute;
     top: 30px;
+    left: 0px;
     border-radius: 5px;
     border: solid 1px rgb(195, 195, 195);
     height: 35px;
@@ -117,19 +176,35 @@
     font-size: 16px;
     padding-left: 12px;
     outline: none;
+}
+
+.loginEmailField {
+    top: 30px;
+}
+
+
+.signupEmailField {
+    top: 95px;
 }
 
 .passwordLabel {
     position: absolute;
+    left: 0px;
     font-weight: 600;
     font-size: 17px;
     color: rgb(50, 50, 50);
-    top: 85px;
 }
 
-.loginPasswordField, .signupPasswordField {
+.loginPasswordLabel {
+    top: 90px;
+}
+
+.signupPasswordLabel {
+    top: 155px;
+}
+
+.passwordField {
     position: absolute;
-    top: 115px;
     border-radius: 5px;
     border: solid 1px rgb(195, 195, 195);
     height: 35px;
@@ -138,7 +213,16 @@
     font-family: inherit;
     font-size: 16px;
     padding-left: 12px;
+    left: 0px;
     outline: none;
+}
+
+.loginPasswordField {
+    top: 115px;
+}
+
+.signupPasswordField {
+    top: 180px;
 }
 
 /* signup section */
@@ -154,15 +238,17 @@
 
 .repeatPasswordLabel {
     position: absolute;
+    left: 0px;
     font-weight: 600;
     font-size: 17px;
     color: rgb(50, 50, 50);
-    top: 175px;
+    top: 235px;
 }
 
 .repeatPasswordField {
     position: absolute;
-    top: 205px;
+    top: 260px;
+    left: 0px;
     border-radius: 5px;
     border: solid 1px rgb(195, 195, 195);
     height: 35px;
@@ -174,14 +260,27 @@
     outline: none;
 }
 
-.loginEmailField::placeholder, .signupEmailField::placeholder, 
-.loginPasswordField::placeholder, .signupPasswordField::placeholder, 
+.nameField::placeholder,
+.roleField,
+.roleField::placeholder,
+.emailField::placeholder, 
+.passwordField::placeholder,
 .repeatPasswordField::placeholder {
     color: rgb(180, 180, 180);
 }
 
-.loginEmailField:focus, .signupEmailField:focus, 
-.loginPasswordField:focus, .signupPasswordField:focus, 
+.roleSelected {
+    color: black;
+}
+
+.roleOption {
+    color: black;
+}
+
+.nameField:focus, 
+.roleField:focus,
+.emailField:focus,
+.passwordField:focus,
 .repeatPasswordField:focus {
     border-color: rgb(86, 97, 250, 0.5);
     box-shadow: 1px 2px 4px rgba(86, 97, 250, 0.5);
@@ -191,7 +290,7 @@
 .submitAuthButton {
     position: absolute;
     left: calc(50% - 80px);
-    top: 305px;
+    top: 320px;
     width: 160px;
     height: 50px;
     outline: none;
@@ -218,7 +317,7 @@
 }
 
 .submitAuthButton:active {
-    top: 313px;
+    top: 328px;
     left: calc(50% - 72px);
     -moz-transition: all .045s ease-out;
     -o-transition: all .045s ease-out;
@@ -228,7 +327,7 @@
 
 .authButtonShadow {
     position: absolute;
-    top: 314px;
+    top: 329px;
     left: calc(50% - 71px);
     width: 158px;
     height: 48px;
