add terms of service popup and checkbox

--- a/public/styles/ClassificationPageStyles.css
+++ b/public/styles/ClassificationPageStyles.css
@@ -297,7 +297,7 @@
     border-radius: 7px;
     overflow-y: auto;
     overflow-x: hidden;
-    box-shadow: 0 0 20px rgba(0, 0, 0, 0.15);
+    box-shadow: 0 10px 25px -15px rgb(34, 34, 34);
 }
 
 .nationalityListText {
@@ -396,7 +396,7 @@
     left: calc(50% - 420px);
     float: left;
     transform: translate(+25%, -50%);
-    box-shadow: 0 4px 4px rgba(0, 0, 0, 0.4);
+    box-shadow: 0 10px 25px -15px rgb(34, 34, 34);
     z-index: 12000;
 }
 
