--- a/public/styles/ModelSubmissionStyles.css
+++ b/public/styles/ModelSubmissionStyles.css
@@ -306,7 +306,7 @@
     top: 300px;
     left: calc(50% - 325px);
     float: left;
-    box-shadow: 0 4px 4px rgba(0, 0, 0, 0.4);
+    box-shadow: 0 10px 25px -15px rgb(34, 34, 34);
     z-index: 12000;
 }
 
