--- a/public/styles/PresentStyles.css
+++ b/public/styles/PresentStyles.css
@@ -10,7 +10,7 @@
     left: calc(50% - 420px);
     float: left;
     transform: translate(+25%, -50%);
-    box-shadow: 0 4px 4px rgba(0, 0, 0, 0.4);
+    box-shadow: 0 10px 25px -15px rgb(34, 34, 34);
     z-index: 12000;
 }
 
@@ -25,7 +25,7 @@
     left: calc(50% - 420px);
     float: left;
     transform: translate(+25%, -50%);
-    box-shadow: 0 4px 4px rgba(0, 0, 0, 0.4);
+    box-shadow: 0 10px 25px -15px rgb(34, 34, 34);
     z-index: 12000;
 }
 
