--- a/public/styles/SettingsStyles.css
+++ b/public/styles/SettingsStyles.css
@@ -8,6 +8,7 @@
     overflow-x: hidden;
     width: 368px;
     background-color: white;
+    box-shadow: 0 10px 25px -15px rgb(34, 34, 34);
     z-index: 20;
     border-radius: 7px;
 }
