--- a/public/styles/DatasetChoosingStyles.css
+++ b/public/styles/DatasetChoosingStyles.css
@@ -13,7 +13,6 @@
     z-index: 12000;
 }
 
-
 .dataChoosingTitle {
     position: relative;
     color: rgb(63, 63, 63);
@@ -25,6 +24,39 @@
     border-bottom-style: solid;
     border-bottom-width: 2px;
     border-bottom-color: rgb(224, 224, 224);
+}
+
+.datasetChoosingField {
+    position: absolute;
+    color: rgb(63, 63, 63);
+    font-size: 35px;
+    top: 12px;
+    left: 143px;
+    width: 220px;
+    padding-bottom: 0px;
+    padding-left: 4px;
+    font-weight: bold;
+    font-family: inherit;
+    outline: none;
+    border: 1px solid rgb(211, 211, 211);
+    border-radius: 5px;
+    transition: all .08s ease-out;
+    -webkit-box-shadow: none;
+    -moz-box-shadow: none;
+    box-shadow: none;
+}
+
+.datasetChoosingField:hover {
+    border: 1px solid rgb(142, 159, 255);
+    box-shadow: 0 6px 15px -12px rgba(17, 0, 255, 0.7);
+    transition: all .08s ease-out;
+}
+
+.datasetTypeOption {
+    font-size: 25px;
+    font-family: inherit;
+    color: rgb(63, 63, 63);
+    font-weight: bold;
 }
 
 .availableNationalities {
@@ -107,6 +139,8 @@
     background-color: white;
     width: 106px;
     height: 30px;
+    font-family: inherit;
+    font-size: 14px;
     text-overflow: ellipsis;
     white-space: nowrap;
     overflow: hidden;
@@ -118,8 +152,7 @@
 }
 
 .nationalityButton:hover {
-    background-color: rgb(170, 170, 170);
-    color: white
+    background-color: rgb(238, 238, 238);
 }
 
 
