--- a/public/styles/LoginStyles.css
+++ b/public/styles/LoginStyles.css
@@ -15,7 +15,7 @@
     height: 130px;
     left: calc(50% - 200px);
     top: 200px;
-    border-radius: 10px;
+    border-radius: 5px;
     background-color: rgba(255, 255, 255);
 }
 
@@ -23,8 +23,8 @@
     position: absolute;
     height: 45px;
     width: 100%;
-    border-top-left-radius: 10px;
-    border-top-right-radius: 10px;
+    border-top-left-radius: 5px;
+    border-top-right-radius: 5px;
     background-color: rgb(63, 63, 63);
     box-shadow: 0 1px 4px rgba(0, 0, 0, 0.5);
     z-index: 10;
@@ -33,7 +33,7 @@
 .authTitleText {
     position: absolute;
     top: -7px;
-    left: 17px;
+    left: 15px;
     font-size: 22px;
     color: white;
     font-weight: 600;
@@ -95,7 +95,7 @@
     top: 115px;
     width: 400px;
     height: 275px;
-    border-radius: 10px;
+    border-radius: 5px;
     background-color: white;
     box-shadow: 0 10px 25px -15px rgb(34, 34, 34);
 }
@@ -113,7 +113,7 @@
 }
 
 .signupEmailLabel {
-    top: 70px;
+    top: 75px;
 }
 
 
@@ -139,7 +139,7 @@
 
 
 .signupEmailField {
-    top: 95px;
+    top: 100px;
 }
 
 .passwordLabel {
@@ -155,7 +155,7 @@
 }
 
 .signupPasswordLabel {
-    top: 150px;
+    top: 155px;
 }
 
 .passwordField {
@@ -177,7 +177,7 @@
 }
 
 .signupPasswordField {
-    top: 175px;
+    top: 180px;
 }
 
 /* signup section */
@@ -188,14 +188,14 @@
     right: 0px;
     top: 115px;
     height: 450px;
-    border-radius: 10px;
+    border-radius: 5px;
     background-color: white;
     box-shadow: 0 10px 25px -15px rgb(34, 34, 34);
 }
 
 .nameField {
     position: absolute;
-    top: 20px;
+    top: 25px;
     left: 30px;
     border-radius: 5px;
     border: solid 1px rgb(195, 195, 195);
@@ -210,7 +210,7 @@
 
 .roleField {
     position: absolute;
-    top: 20px;
+    top: 25px;
     right: 30px;
     border-radius: 5px;
     border: solid 1px rgb(195, 195, 195);
@@ -225,7 +225,7 @@
 
 .nameLabel {
     position: absolute;
-    top: -4px;
+    top: 1px;
     left: 30px;
     font-weight: 600;
     font-size: 17px;
@@ -234,7 +234,7 @@
 
 .roleLabel {
     position: absolute;
-    top: -4px;
+    top: 1px;
     left: 235px;
     font-weight: 600;
     font-size: 17px;
@@ -247,12 +247,12 @@
     font-weight: 600;
     font-size: 17px;
     color: rgb(50, 50, 50);
-    top: 230px;
+    top: 235px;
 }
 
 .repeatPasswordField {
     position: absolute;
-    top: 255px;
+    top: 260px;
     left: 30px;
     border-radius: 5px;
     border: solid 1px rgb(195, 195, 195);
@@ -281,6 +281,15 @@
 .roleOption {
     color: black;
 }
+
+.nameField:hover, 
+.roleField:hover,
+.emailField:hover,
+.passwordField:hover,
+.repeatPasswordField:hover {
+    border-color: rgb(86, 97, 250, 0.5);
+}
+
 
 .nameField:focus, 
 .roleField:focus,
@@ -365,18 +374,23 @@
 
 .verificationMessageBox {
     position: absolute;
-    top: 785px;
-    left: calc(50% - 247px);
-    width: 500px;
-    height: 25px;
+    top: 35px;
+    left: calc(50% - 200px);
+    width: 400px;
+    height: 75px;
+    background-color: white;
+    border-radius: 5px;
     text-align: center;
+    box-shadow: 0 10px 25px -15px rgb(34, 34, 34);
 }
 
 .verificationMessage {
     position: absolute;
     font-family: inherit;
-    font-size: 22px;
-    color: white;
+    font-size: 17px;
+    left: 15px;
+    right: 15px;
+    color: rgb(72, 83, 235);
 }
 
 /* terms of serive consent check and popup box */
@@ -393,6 +407,12 @@
     border: solid 1px rgb(126, 126, 126);
     border-radius: 50%;
     z-index: 10;
+    transition: all .1s ease-out;
+}
+
+.consentCheckBox:hover {
+    background-color: rgb(86, 97, 250, 0.1);
+    transition: all .1s ease-out;
 }
 
 .checkMark {
