--- a/public/styles/ClassificationPopupStyles.css
+++ b/public/styles/ClassificationPopupStyles.css
@@ -6,7 +6,7 @@
     width: 550px;
     height: 300px;
     background-color: white;
-    border-radius: 10px;
+    border-radius: 4px;
     z-index: 20000;
     box-shadow: 0 10px 25px -15px rgb(34, 34, 34);
     font-family: 'Source Sans Pro', sans-serif;
@@ -14,8 +14,8 @@
 
 .classificationTitleBox {
     position: absolute;
-    left: 00px;
-    right: 00px;
+    left: 0px;
+    right: 0px;
     height: 55px;
     box-shadow: 0 2px 7px rgba(0, 0, 0, 0.35);
 }
@@ -125,6 +125,28 @@
     left: calc(50% - 93px);
 }
 
+.classificationErrorText {
+    position: relative;
+    top: 60px;
+    width: 400px;
+    left: calc(50% - 200px);
+    color: red;
+    font-family: inherit;
+    font-size: 19px;
+    text-align: center;
+}
+
+.classificationFormatErrorText {
+    position: relative;
+    top: 70px;
+    width: 300px;
+    left: calc(50% - 150px);
+    color: red;
+    font-family: inherit;
+    margin-top: -11px;
+    font-size: 17px;
+    text-align: center;
+}
 
 .buttonShadowBox {
     position: absolute;
