--- a/public/styles/SettingsStyles.css
+++ b/public/styles/SettingsStyles.css
@@ -278,7 +278,7 @@
     color: rgb(50, 50, 50); 
 }
 
-.confirmDeletionButton {
+/*.confirmDeletionButton {
     position: absolute;
     top: 310px;
     left: calc(50% - 55px);
@@ -301,6 +301,12 @@
 
 .confirmDeletionButton:active {
     font-size: 23px;
+}*/
+
+.confirmDeletionButton {
+    position: absolute;
+    top: 300px;
+    left: calc(50% - 70px);
 }
 
 .cancelDeletionButton {
